uapi/supercall.h

struct ksu_set_app_profile_cmd {
    struct app_profile profile; /* Input: app profile structure */
};
struct ksu_get_feature_cmd {
    __u32 feature_id; /* Input: feature ID (enum ksu_feature_id) */
    __u64 value; /* Output: feature value/state */
    __u8 supported; /* Output: true if feature is supported, false otherwise */
};
struct ksu_set_feature_cmd {
    __u32 feature_id; /* Input: feature ID (enum ksu_feature_id) */
    __u64 value; /* Input: feature value/state to set */
};
struct ksu_get_wrapper_fd_cmd {
    __u32 fd; /* Input: userspace fd */
    __u32 flags; /* Input: flags of userspace fd */
};
struct ksu_manage_mark_cmd {
    __u32 operation; /* Input: KSU_MARK_* */
    __s32 pid; /* Input: target pid (0 for all processes) */
    __u32 result; /* Output: for get operation - mark status or reg_count */
};
struct ksu_get_hook_mode_cmd {
    char mode[16];
};
struct ksu_get_version_tag_cmd {
    char tag[32];
};
struct ksu_nuke_ext4_sysfs_cmd {
    __aligned_u64 arg; /* Input: mnt pointer */
};
struct ksu_add_try_umount_cmd {
    __aligned_u64 arg; /* char ptr, this is the mountpoint */
    __u32 flags; /* this is the flag we use for it */
    __u8 mode; /* denotes what to do with it 0:wipe_list 1:add_to_list 2:delete_entry */
};
struct ksu_get_sulog_fd_cmd {
    __u32 flags; /* Input: reserved for future use, must be 0 */
};
// SukiSU-Ultra compat structs
struct ksu_get_full_version_cmd {
    char version_full[255]; // Output: full version string
};
struct ksu_hook_type_cmd {
    char hook_type[32]; // Output: hook type string
};
struct ksu_enable_kpm_cmd {
    __u8 enabled; // Output: 1 if KPM is enabled at compile time, 0 otherwise
};
struct ksu_kpm_cmd {
    __u64 control_code; // Input: SUKISU_KPM_LOAD (1) through SUKISU_KPM_VERSION (7)
    __u64 arg1; // Input/Output: depends on operation
    __u64 arg2; // Input/Output: depends on operation
    __u64 result_code; // Output: result of KPM operation
};