userspace/ksud/src/bindings_prebuilt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_set_app_profile_cmd"]
        [::std::mem::size_of::<ksu_set_app_profile_cmd>() - 784usize];
    ["Alignment of ksu_set_app_profile_cmd"]
        [::std::mem::align_of::<ksu_set_app_profile_cmd>() - 8usize];
    ["Offset of field: ksu_set_app_profile_cmd::profile"]
        [::std::mem::offset_of!(ksu_set_app_profile_cmd, profile) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_feature_cmd {
    pub feature_id: __u32,
    pub value: __u64,
    pub supported: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_feature_cmd"][::std::mem::size_of::<ksu_get_feature_cmd>() - 24usize];
    ["Alignment of ksu_get_feature_cmd"][::std::mem::align_of::<ksu_get_feature_cmd>() - 8usize];
    ["Offset of field: ksu_get_feature_cmd::feature_id"]
        [::std::mem::offset_of!(ksu_get_feature_cmd, feature_id) - 0usize];
    ["Offset of field: ksu_get_feature_cmd::value"]
        [::std::mem::offset_of!(ksu_get_feature_cmd, value) - 8usize];
    ["Offset of field: ksu_get_feature_cmd::supported"]
        [::std::mem::offset_of!(ksu_get_feature_cmd, supported) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_set_feature_cmd {
    pub feature_id: __u32,
    pub value: __u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_set_feature_cmd"][::std::mem::size_of::<ksu_set_feature_cmd>() - 16usize];
    ["Alignment of ksu_set_feature_cmd"][::std::mem::align_of::<ksu_set_feature_cmd>() - 8usize];
    ["Offset of field: ksu_set_feature_cmd::feature_id"]
        [::std::mem::offset_of!(ksu_set_feature_cmd, feature_id) - 0usize];
    ["Offset of field: ksu_set_feature_cmd::value"]
        [::std::mem::offset_of!(ksu_set_feature_cmd, value) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_wrapper_fd_cmd {
    pub fd: __u32,
    pub flags: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_wrapper_fd_cmd"][::std::mem::size_of::<ksu_get_wrapper_fd_cmd>() - 8usize];
    ["Alignment of ksu_get_wrapper_fd_cmd"]
        [::std::mem::align_of::<ksu_get_wrapper_fd_cmd>() - 4usize];
    ["Offset of field: ksu_get_wrapper_fd_cmd::fd"]
        [::std::mem::offset_of!(ksu_get_wrapper_fd_cmd, fd) - 0usize];
    ["Offset of field: ksu_get_wrapper_fd_cmd::flags"]
        [::std::mem::offset_of!(ksu_get_wrapper_fd_cmd, flags) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_manage_mark_cmd {
    pub operation: __u32,
    pub pid: __s32,
    pub result: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_manage_mark_cmd"][::std::mem::size_of::<ksu_manage_mark_cmd>() - 12usize];
    ["Alignment of ksu_manage_mark_cmd"][::std::mem::align_of::<ksu_manage_mark_cmd>() - 4usize];
    ["Offset of field: ksu_manage_mark_cmd::operation"]
        [::std::mem::offset_of!(ksu_manage_mark_cmd, operation) - 0usize];
    ["Offset of field: ksu_manage_mark_cmd::pid"]
        [::std::mem::offset_of!(ksu_manage_mark_cmd, pid) - 4usize];
    ["Offset of field: ksu_manage_mark_cmd::result"]
        [::std::mem::offset_of!(ksu_manage_mark_cmd, result) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_hook_mode_cmd {
    pub mode: [::std::os::raw::c_char; 16usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_hook_mode_cmd"][::std::mem::size_of::<ksu_get_hook_mode_cmd>() - 16usize];
    ["Alignment of ksu_get_hook_mode_cmd"]
        [::std::mem::align_of::<ksu_get_hook_mode_cmd>() - 1usize];
    ["Offset of field: ksu_get_hook_mode_cmd::mode"]
        [::std::mem::offset_of!(ksu_get_hook_mode_cmd, mode) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_version_tag_cmd {
    pub tag: [::std::os::raw::c_char; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_version_tag_cmd"][::std::mem::size_of::<ksu_get_version_tag_cmd>() - 32usize];
    ["Alignment of ksu_get_version_tag_cmd"]
        [::std::mem::align_of::<ksu_get_version_tag_cmd>() - 1usize];
    ["Offset of field: ksu_get_version_tag_cmd::tag"]
        [::std::mem::offset_of!(ksu_get_version_tag_cmd, tag) - 0usize];
};
pub const KSU_MARK_GET: __u32 = 1;
pub const KSU_MARK_MARK: __u32 = 2;
pub const KSU_MARK_UNMARK: __u32 = 3;
pub const KSU_MARK_REFRESH: __u32 = 4;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_nuke_ext4_sysfs_cmd {
    pub arg: __u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_nuke_ext4_sysfs_cmd"][::std::mem::size_of::<ksu_nuke_ext4_sysfs_cmd>() - 8usize];
    ["Alignment of ksu_nuke_ext4_sysfs_cmd"]
        [::std::mem::align_of::<ksu_nuke_ext4_sysfs_cmd>() - 8usize];
    ["Offset of field: ksu_nuke_ext4_sysfs_cmd::arg"]
        [::std::mem::offset_of!(ksu_nuke_ext4_sysfs_cmd, arg) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_add_try_umount_cmd {
    pub arg: __u64,
    pub flags: __u32,
    pub mode: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_add_try_umount_cmd"][::std::mem::size_of::<ksu_add_try_umount_cmd>() - 16usize];
    ["Alignment of ksu_add_try_umount_cmd"]
        [::std::mem::align_of::<ksu_add_try_umount_cmd>() - 8usize];
    ["Offset of field: ksu_add_try_umount_cmd::arg"]
        [::std::mem::offset_of!(ksu_add_try_umount_cmd, arg) - 0usize];
    ["Offset of field: ksu_add_try_umount_cmd::flags"]
        [::std::mem::offset_of!(ksu_add_try_umount_cmd, flags) - 8usize];
    ["Offset of field: ksu_add_try_umount_cmd::mode"]
        [::std::mem::offset_of!(ksu_add_try_umount_cmd, mode) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_sulog_fd_cmd {
    pub flags: __u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_sulog_fd_cmd"][::std::mem::size_of::<ksu_get_sulog_fd_cmd>() - 4usize];
    ["Alignment of ksu_get_sulog_fd_cmd"][::std::mem::align_of::<ksu_get_sulog_fd_cmd>() - 4usize];
    ["Offset of field: ksu_get_sulog_fd_cmd::flags"]
        [::std::mem::offset_of!(ksu_get_sulog_fd_cmd, flags) - 0usize];
};
pub const KSU_UMOUNT_WIPE: __u8 = 0;
pub const KSU_UMOUNT_ADD: __u8 = 1;
pub const KSU_UMOUNT_DEL: __u8 = 2;
pub const KSU_IOCTL_GRANT_ROOT: __u32 = 19201;
pub const KSU_IOCTL_GET_INFO: __u32 = 2148551426;
pub const KSU_IOCTL_GET_INFO_LEGACY: __u32 = 2147502850;
pub const KSU_IOCTL_REPORT_EVENT: __u32 = 1073761027;
pub const KSU_IOCTL_SET_SEPOLICY: __u32 = 3221244676;
pub const KSU_IOCTL_CHECK_SAFEMODE: __u32 = 2147502853;
pub const KSU_IOCTL_GET_ALLOW_LIST: __u32 = 3221244678;
pub const KSU_IOCTL_GET_DENY_LIST: __u32 = 3221244679;
pub const KSU_IOCTL_NEW_GET_ALLOW_LIST: __u32 = 3221506822;
pub const KSU_IOCTL_NEW_GET_DENY_LIST: __u32 = 3221506823;
pub const KSU_IOCTL_UID_GRANTED_ROOT: __u32 = 3221244680;
pub const KSU_IOCTL_UID_SHOULD_UMOUNT: __u32 = 3221244681;
pub const KSU_IOCTL_GET_MANAGER_APPID: __u32 = 2147502858;
pub const KSU_IOCTL_GET_APP_PROFILE: __u32 = 3221244683;
pub const KSU_IOCTL_SET_APP_PROFILE: __u32 = 1073761036;
pub const KSU_IOCTL_GET_FEATURE: __u32 = 3221244685;
pub const KSU_IOCTL_SET_FEATURE: __u32 = 1073761038;
pub const KSU_IOCTL_GET_WRAPPER_FD: __u32 = 1073761039;
pub const KSU_IOCTL_MANAGE_MARK: __u32 = 3221244688;
pub const KSU_IOCTL_NUKE_EXT4_SYSFS: __u32 = 1073761041;
pub const KSU_IOCTL_ADD_TRY_UMOUNT: __u32 = 1073761042;
pub const KSU_IOCTL_SET_INIT_PGRP: __u32 = 19219;
pub const KSU_IOCTL_GET_SULOG_FD: __u32 = 1074023188;
pub const KSU_IOCTL_DISABLE_ESCAPE_TO_ROOT: __u32 = 19221;
pub const KSU_IOCTL_GET_HOOK_MODE: __u32 = 2147502946;
pub const KSU_IOCTL_GET_VERSION_TAG: __u32 = 2147502947;
pub const KSU_IOCTL_GET_FULL_VERSION: __u32 = 2147502948;
pub const KSU_IOCTL_HOOK_TYPE: __u32 = 2147502949;
pub const KSU_IOCTL_ENABLE_KPM: __u32 = 2147502950;
pub const KSU_IOCTL_KPM: __u32 = 3221244872;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_get_full_version_cmd {
    pub version_full: [::std::os::raw::c_char; 255usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_get_full_version_cmd"]
        [::std::mem::size_of::<ksu_get_full_version_cmd>() - 255usize];
    ["Alignment of ksu_get_full_version_cmd"]
        [::std::mem::align_of::<ksu_get_full_version_cmd>() - 1usize];
    ["Offset of field: ksu_get_full_version_cmd::version_full"]
        [::std::mem::offset_of!(ksu_get_full_version_cmd, version_full) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_hook_type_cmd {
    pub hook_type: [::std::os::raw::c_char; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_hook_type_cmd"][::std::mem::size_of::<ksu_hook_type_cmd>() - 32usize];
    ["Alignment of ksu_hook_type_cmd"][::std::mem::align_of::<ksu_hook_type_cmd>() - 1usize];
    ["Offset of field: ksu_hook_type_cmd::hook_type"]
        [::std::mem::offset_of!(ksu_hook_type_cmd, hook_type) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_enable_kpm_cmd {
    pub enabled: __u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ksu_enable_kpm_cmd"][::std::mem::size_of::<ksu_enable_kpm_cmd>() - 1usize];
    ["Alignment of ksu_enable_kpm_cmd"][::std::mem::align_of::<ksu_enable_kpm_cmd>() - 1usize];
    ["Offset of field: ksu_enable_kpm_cmd::enabled"]
        [::std::mem::offset_of!(ksu_enable_kpm_cmd, enabled) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ksu_kpm_cmd {
    pub control_code: __u64,
    pub arg1: __u64,
    pub arg2: __u64,
    pub result_code: __u64,
}
